--- a/pages/sub_2.html
+++ b/pages/sub_2.html
@@ -5,35 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>부산관광공사</title>
+    <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/sub_2.css" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon-32x32.png"
+    />
   </head>
-  <body style="overflow-x: hidden">
-    <!-- title_all -->
-    <div class="title_all">
-      <div class="title">
-        <a href="../index.html">
-          <div class="head">
-            <img src="../images/logo.png" alt="" />
-            <h1>부산관광공사</h1>
+  <body>
+    <div class="header">
+      <a class="logo" href="../index.html">
+        <img src="../images/logo.png" alt="" />
+        <h1>부산관광공사</h1>
+      </a>
+      <ul class="menu">
+        <li>
+          <a class="menu-item" href="../pages/sub.html">주요사업</a>
+          <div class="menu1">
+            <div>
+              <div>주요사업</div>
+              <ul>
+                <li><a href="../pages/sub.html">관광사업</a></li>
+                <li><a href="../pages/sub_2.html">마케팅</a></li>
+                <li><a href="#x">MICE</a></li>
+                <li><a href="#x">BOF</a></li>
+                <li><a href="#x">관광기업지원센터</a></li>
+              </ul>
+            </div>
           </div>
-        </a>
-        <div class="menu">
-          <ul>
-            <li><a href="./sub.html">주요사업</a></li>
-            <li><a href="#x">정보공개</a></li>
-            <li><a href="#x">알림마당</a></li>
-            <li><a href="#x">공사소개</a></li>
-          </ul>
-        </div>
-        <div class="lan">
-          <p>LANGUAGE ▼</p>
-          <p class="line"></p>
-          <img src="../images/facebook.png" alt="" />
-          <img src="../images/line.png" alt="" />
-          <img src="../images/insta.png" alt="" />
-          <img src="../images/youtube.png" alt="" />
-        </div>
+        </li>
+        <li>
+          <a class="menu-item" href="#x">정보공개</a>
+          <div class="menu1">
+            <div>
+              <div>정보공개</div>
+              <ul>
+                <li><a href="#x">정보공개제도 안내</a></li>
+                <li><a href="#x">정보제공목록</a></li>
+                <li><a href="#x">사전정보공표</a></li>
+                <li><a href="#x">경영공시</a></li>
+                <li><a href="#x">즐겨찾는 사전정보</a></li>
+                <li><a href="#x">공공데이터 개방</a></li>
+                <li><a href="#x">위원회</a></li>
+                <li><a href="#x">사규</a></li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li>
+          <a class="menu-item" href="#x">알림마당</a>
+          <div class="menu1">
+            <div>
+              <div>알림마당</div>
+              <ul>
+                <li><a href="#x">공고행사</a></li>
+                <li><a href="#x">보도자료</a></li>
+                <li><a href="#x">채용공고</a></li>
+                <li><a href="#x">계약정보</a></li>
+                <li><a href="#x">관광동향</a></li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li>
+          <a class="menu-item" href="#x">공사소개</a>
+          <div class="menu1">
+            <div>
+              <div>공사소개</div>
+              <ul>
+                <li><a href="#x">CEO 인사말</a></li>
+                <li><a href="#x">비전 및 경영전략</a></li>
+                <li><a href="#x">연혁</a></li>
+                <li><a href="#x">CI</a></li>
+                <li><a href="#x">BI</a></li>
+                <li><a href="#x">조직도</a></li>
+                <li><a href="#x">찾아오시는 길</a></li>
+              </ul>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="lan">
+        <p>LANGUAGE ▼</p>
+        <img src="../images/facebook.png" alt="" />
+        <img src="../images/line.png" alt="" />
+        <img src="../images/insta.png" alt="" />
+        <img src="../images/youtube.png" alt="" />
       </div>
     </div>
     <!-- Group2 -->
@@ -62,7 +122,7 @@
     </div>
     <!-- Group3 -->
     <div class="Group3">
-      <img src="../images/sub_2busan.png" alt="" />
+      <img src="../images/sub_2busan.jpg" alt="" />
       <div class="busan2030"></div>
       <div class="Shape9"></div>
       <h1>해외 마케팅</h1>
@@ -95,10 +155,10 @@
       </p>
       <div class="global_marketing">GLOBAL MARKTING</div>
       <ul class="i_ul">
-        <li class="i_li"><img src="../images/sub_2expo.png" alt="" /></li>
-        <li class="i_li"><img src="../images/sub_2gstar.png" alt="" /></li>
-        <li class="i_li"><img src="../images/sub2_mascot.png" alt="" /></li>
-        <li class="i_li"><img src="../images/sub2_spring.png" alt="" /></li>
+        <li class="i_li"><img src="../images/sub_2expo.jpg" alt="" /></li>
+        <li class="i_li"><img src="../images/sub_2gstar.jpg" alt="" /></li>
+        <li class="i_li"><img src="../images/sub2_mascot.jpg" alt="" /></li>
+        <li class="i_li"><img src="../images/sub2_spring.jpg" alt="" /></li>
       </ul>
       <img src="../images/Rectangle-8.png" alt="" class="rectangle" />
     </div>
@@ -140,5 +200,7 @@
     </div>
     <!-- top -->
     <a href="#" class="top"></a>
+    <script src="../js/common.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
